# POO-python-fundamentos

./: .gitignore  README.md  main.py  pyproject.toml
docs/: study_guide.md
examples/: run_all_examples.py
exercises/: exercise_01_person.py  exercise_02_car.py  exercise_03_bank_account.py  exercise_04_inheritance.py  exercise_05_product.py
src/oop_python_fundamentals/abstraction/: coffee_machine.py
src/oop_python_fundamentals/basics/: car.py  person.py
src/oop_python_fundamentals/encapsulation/: bank_account.py
src/oop_python_fundamentos/: __init__.py
src/oop_python_fundamentos/abstraccion/: __init__.py  coffee_machine.py
src/oop_python_fundamentos/basicos/: __init__.py  car.py  person.py
src/oop_python_fundamentos/composicion/: __init__.py  computer.py
src/oop_python_fundamentos/composition/: computer.py
src/oop_python_fundamentos/encapsulamiento/: __init__.py  bank_account.py  product_with_property.py
src/oop_python_fundamentos/herencia/: __init__.py  animals.py  students.py
src/oop_python_fundamentos/inheritance/: animals.py
src/oop_python_fundamentos/metodos_especiales/: __init__.py  product.py
src/oop_python_fundamentos/polimorfismo/: __init__.py  payment_methods.py
tests/: test_animals.py  test_bank_account.py  test_car.py  test_coffee_machine.py  test_computer.py  test_payment_methods.py  test_person.py  test_product.py  test_product_with_property.py  test_students.py
