[project]
name = "oop-python-fundamentos"
version = "1.0.0"
description = "Proyecto educativo sobre fundamentos de Programación Orientada a Objetos en Python"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F"]
